Fix footer alignment issues

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -6,7 +6,6 @@ footer{
 		margin: 0;
 		line-height: 1.6;
 		font-size: .9rem;
-		white-space: nowrap;
 
 		strong{
 			font-weight: normal;
